--- a/templates/image_analysis.html
+++ b/templates/image_analysis.html
@@ -19,17 +19,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
-            /* background-color: #c4c1c1; */
-            /* background: rgb(233,233,233);
-background: radial-gradient(circle, rgba(233,233,233,1) 0%, rgba(120,120,120,1) 100%); */
-
-
-
-background: rgb(240,241,246);
-background: linear-gradient(0deg, rgba(240,241,246,1) 0%, rgba(172,165,245,1) 100%);
-background-image: url({{ url_for('static', filename='bg.png') }});
-background-size: cover;
+            background: rgb(240, 241, 246);
+            background: linear-gradient(0deg, rgba(240, 241, 246, 1) 0%, rgba(172, 165, 245, 1) 100%);
+            background-image: url("{{ url_for('static', filename='bg.png') }}");
+            background-size: cover;
         }
+
         @media screen and (max-width: 768px) {
             body {
                 background: rgb(240,241,246);
@@ -211,61 +206,6 @@ background-size: cover;
 
         #form-card {
             background-color: #e5e7eb;
-        }
-
-
-
-        /* updated: for hide the div*/
-        .diet_plan_space {
-            display: block;
-        }
-        .response {
-            display: none;
-        }
-        .response.show {
-            display: block;
-        }
-        .video-item {
-        position: relative;
-        overflow: hidden;
-        /* height: 0; */
-        }
-        .video-item iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        /* aspect-ratio: 16 / 9; */
-        }
-        .form-label{
-            color: #ddd;
-        }
-
-        .diet-resp-section{
-            background: rgb(7,75,168);
-            background: linear-gradient(36deg, rgb(223, 223, 223) 0%, rgb(156, 156, 156) 100%);
-            padding: 25px 20px 25px 20px;
-
-            /* margin-top: 100px; */
-            margin-top: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .diet-resp-section .label-text{
-            color: #082d5e;
-            font-weight: 600;
-            margin-bottom: 10px;
-        }
-        .image-section {
-            backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(49, 55, 82, 0.75);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-
-            padding: 25px 20px 25px 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
 
